# CRoM-Context-Rot-Mitigation--EfficientLLM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: efficiency_eval.py  longbench_eval.py
docs/: architecture.md  versioning.md
examples/corpus/: sample_docs.jsonl  sample_queries.jsonl
scripts/: gen_release_notes.py  release.sh
src/crom_efficientllm/: __init__.py  cli.py  demo.py
src/crom_efficientllm/budget_packer/: __init__.py  packer.py
src/crom_efficientllm/drift_estimator/: __init__.py  estimator.py
src/crom_efficientllm/plugins/: evidently_drift.py  flashrank_reranker.py  llmlingua_compressor.py
src/crom_efficientllm/rerank_engine/: __init__.py  rerank.py
tests/: test_drift.py  test_packer.py  test_rerank.py
